# videoglancer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
glancer/: __init__.py  captions.py  cli.py  content.py  extract.py  html_builder.py  image_similarity.py  parser.py  pdf_builder.py  playlist.py  process.py  render.py  schema.py  slides.py
glancer/templates/: template.html
glancer_py/: captions.py  cli.py  html_builder.py  process.py
python_glancer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_captions.py  test_cli.py  test_content.py  test_extract.py  test_image_similarity.py  test_integration.py  test_parser.py  test_playlist.py  test_render.py  test_schema.py
