[project]
name = "python-glancer"
version = "0.1.1"
description = "Python port of glancer: glance through YouTube talks by stitching slides and captions."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Original authors of glancer and Python port contributors"}]
dependencies = [
    "webvtt-py>=0.4",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[project.scripts]
glancer = "glancer_py.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "basic"
