[project]
name = "videoglancer"
version = "0.1.1"
description = "Python port of glancer: glance through YouTube talks by stitching slides and captions."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {
    name = "Jorge Vicente Cantero",
    email = "jorgevc@fastmail.es"
    },
    {
    name = "Ruben Berenguel Montoro",
    email = "ruben@mostlymaths.net"
    }
]
dependencies = [
    "webvtt-py>=0.4",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[project.scripts]
glancer = "glancer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "basic"
